	not being viewed in the main window.

	* libbalsa/mailbox_local.c (message_match_real): check for NULL
	values;
	* src/filter-run-dialog.c (balsa_filter_run_dialog_new): call
	prepare-threading to get ready for filtering.

2020-06-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* libbalsa/address.c (libbalsa_address_get_edit_widget):
	* libbalsa/identity.c (libbalsa_identity_select_dialog),
	(libbalsa_identity_config_dialog):
	* libbalsa/libbalsa-gpgme-widgets.c (libbalsa_key_dialog),
	(create_subkey_widget), (smime_show_chain):
	* libbalsa/libbalsa.c (ask_cert_real):
	* libbalsa/smtp-server.c (libbalsa_smtp_server_dialog):
	* libbalsa/source-viewer.c (libbalsa_show_message_source):
	* libbalsa/x509-cert-widget.c (create_chain_widget):

2020-06-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* libbalsa/identity.c (libbalsa_identity_select_dialog),
	(libbalsa_identity_config_dialog):
	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_select_key):
	* libbalsa/libbalsa-gpgme-widgets.c (libbalsa_gpgme_key),
	(libbalsa_key_dialog), (create_key_label_with_warn),
	(create_subkey_widget), (smime_show_chain):
	* libbalsa/libbalsa.c (ask_cert_real):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* libbalsa/address.c (libbalsa_address_get_edit_widget):
	* libbalsa/autocrypt.c (autocrypt_db_dialog_run):
	* libbalsa/html.c (libbalsa_html_new):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Do not crash

	if the message part is changed while the find-in-message bar is
	active.

	* src/balsa-message.c (bm_find_entry_changed_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	toolbar-factory: Stop using direct access to GdkEvent structs

	Use gdk_event_get_event_type instead of directly accessing
	event->type.
